Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20378

QtScript compilation errors without some features

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.0.0
    • 4.7.3
    • Qt Script
    • None
    • Debian GNU/Linux wheezy x86_64
      gcc 4.6.1

      I configured Qt with the options "-no-feature-toolbar", "-no-feature-shortcut" and "-no-feature-syntaxhighlighter" and got a compile errors:

      make[1]: Entering directory `/tmp/qt-everywhere-opensource-src-4.7.3/src/scripttools'
      compiling debugging/qscriptdebugger.cpp
      debugging/qscriptdebugger.cpp: In member function 'QAction* QScriptDebugger::interruptAction(QObject*) const':
      debugging/qscriptdebugger.cpp:1679: error: 'class QAction' has no member named 'setShortcut'
      debugging/qscriptdebugger.cpp: In member function 'QAction* QScriptDebugger::continueAction(QObject*) const':
      debugging/qscriptdebugger.cpp:1696: error: 'class QAction' has no member named 'setShortcut'
      debugging/qscriptdebugger.cpp: In member function 'QAction* QScriptDebugger::stepIntoAction(QObject*) const':
      debugging/qscriptdebugger.cpp:1713: error: 'class QAction' has no member named 'setShortcut'
      debugging/qscriptdebugger.cpp: In member function 'QAction* QScriptDebugger::stepOverAction(QObject*) const':
      debugging/qscriptdebugger.cpp:1730: error: 'class QAction' has no member named 'setShortcut'
      debugging/qscriptdebugger.cpp: In member function 'QAction* QScriptDebugger::stepOutAction(QObject*) const':
      debugging/qscriptdebugger.cpp:1747: error: 'class QAction' has no member named 'setShortcut'
      debugging/qscriptdebugger.cpp: In member function 'QAction* QScriptDebugger::runToCursorAction(QObject*) const':
      debugging/qscriptdebugger.cpp:1764: error: 'class QAction' has no member named 'setShortcut'
      debugging/qscriptdebugger.cpp: In member function 'QAction* QScriptDebugger::toggleBreakpointAction(QObject*) const':
      debugging/qscriptdebugger.cpp:1796: error: 'class QAction' has no member named 'setShortcut'
      debugging/qscriptdebugger.cpp: In member function 'QAction* QScriptDebugger::findInScriptAction(QObject*) const':
      debugging/qscriptdebugger.cpp:1851: error: 'class QAction' has no member named 'setShortcut'
      debugging/qscriptdebugger.cpp: In member function 'QAction* QScriptDebugger::findNextInScriptAction(QObject*) const':
      debugging/qscriptdebugger.cpp:1870: error: 'class QAction' has no member named 'setShortcut'
      debugging/qscriptdebugger.cpp: In member function 'QAction* QScriptDebugger::findPreviousInScriptAction(QObject*) const':
      debugging/qscriptdebugger.cpp:1885: error: 'class QAction' has no member named 'setShortcut'
      debugging/qscriptdebugger.cpp: In member function 'QAction* QScriptDebugger::goToLineAction(QObject*) const':
      debugging/qscriptdebugger.cpp:1899: error: 'class QAction' has no member named 'setShortcut'
      make[1]: *** [.obj/release-shared-emb-arm/qscriptdebugger.o] Error 1
      make[1]: Leaving directory `/home/sergey/code/qt-everywhere-opensource-src-4.7.3/src/scripttools'
      make: *** [sub-scripttools-make_default-ordered] Error 2
      
      make[1]: Entering directory `/tmp/qt-everywhere-opensource-src-4.7.3/src/scripttools'
      compiling debugging/qscriptedit.cpp
      debugging/qscriptedit.cpp: In member function 'void QScriptEdit::gotoLine(int)':
      debugging/qscriptedit.cpp:177: error: invalid use of incomplete type 'struct QTextBlock'
      ../../include/QtGui/../../src/gui/text/qtextdocument.h:67: error: forward declaration of 'struct QTextBlock'
      debugging/qscriptedit.cpp:178: error: invalid use of incomplete type 'const struct QTextBlock'
      ../../include/QtGui/../../src/gui/text/qtextdocument.h:67: error: forward declaration of 'const struct QTextBlock'
      debugging/qscriptedit.cpp: In member function 'void QScriptEdit::updateExtraSelections()':
      debugging/qscriptedit.cpp:263: error: invalid use of incomplete type 'struct QTextBlock'
      ../../include/QtGui/../../src/gui/text/qtextdocument.h:67: error: forward declaration of 'struct QTextBlock'
      debugging/qscriptedit.cpp: In member function 'void QScriptEdit::extraAreaPaintEvent(QPaintEvent*)':
      debugging/qscriptedit.cpp:321: error: variable 'QTextBlock block' has initializer but incomplete type
      debugging/qscriptedit.cpp:321: error: invalid use of incomplete type 'struct QTextBlock'
      ../../include/QtGui/../../src/gui/text/qtextdocument.h:67: error: forward declaration of 'struct QTextBlock'
      debugging/qscriptedit.cpp: In member function 'void QScriptEdit::extraAreaMouseEvent(QMouseEvent*)':
      debugging/qscriptedit.cpp:374: error: invalid use of incomplete type 'struct QTextBlock'
      ../../include/QtGui/../../src/gui/text/qtextdocument.h:67: error: forward declaration of 'struct QTextBlock'
      make[1]: *** [.obj/release-shared-emb-arm/qscriptedit.o] Error 1
      make[1]: Leaving directory `/home/sergey/code/qt-everywhere-opensource-src-4.7.3/src/scripttools'
      make: *** [sub-scripttools-make_default-ordered] Error 2
      
      make[1]: Entering directory `/tmp/qt-everywhere-opensource-src-4.7.3/src/scripttools'
      moc debugging/qscriptenginedebugger.cpp
      compiling debugging/qscriptenginedebugger.cpp
      debugging/qscriptenginedebugger.cpp: In member function 'QMainWindow* QScriptEngineDebugger::standardWindow() const':
      debugging/qscriptenginedebugger.cpp:566: error: 'class QMainWindow' has no member named 'addToolBar'
      debugging/qscriptenginedebugger.cpp:597: error: 'class QMainWindow' has no member named 'setUnifiedTitleAndToolBarOnMac'
      make[1]: *** [.obj/release-shared-emb-arm/qscriptenginedebugger.o] Error 1
      make[1]: Leaving directory `/home/sergey/code/qt-everywhere-opensource-src-4.7.3/src/scripttools'
      make: *** [sub-scripttools-make_default-ordered] Error 2
      

      These errors are trivial and easily solved with attached patches.

        1. qscriptdebugger.patch
          6 kB
        2. qscriptedit.patch
          0.3 kB
        3. qscriptenginedebugger.patch
          0.9 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kenthans Kent Hansen (Inactive)
            laborer Sergey Gusarov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes