Fix scripttools compilation when some features are disabled

Task-number: QTBUG-20378

Change-Id: Ia1dc574824cb1d58c237d60675d1b8a5f8f44c43
Reviewed-by: Kent Hansen <kent.hansen@nokia.com>